feature/version_1.0.0: added build and unit test dependencies to the parent pom